# relay

./: .gitignore  CHANGELOG.md  LICENSE  README.md  package.json
.github/workflows/: ci.yml
action/: action.yml
core/: Cargo.toml  build.rs
core/src/: analytics.rs  clean.rs  cost.rs  lib.rs  main.rs  plugins.rs  replay.rs  retry.rs  scoring.rs  secrets.rs  sessions.rs  tui.rs  validate.rs  watch.rs
core/src/agents/: aider.rs  claude.rs  codex.rs  copilot.rs  gemini.rs  mod.rs  ollama.rs  openai.rs  opencode.rs
core/src/capture/: git.rs  mod.rs  session.rs  todos.rs
core/src/detect/: mod.rs
core/src/handoff/: mod.rs
core/tests/: agents_test.rs  analytics_test.rs  clean_test.rs  validate_test.rs
docs/: INTERVIEW_GUIDE.md  index.html
hooks/: rate-limit.sh
scripts/: build.sh  install.sh  postinstall.js
