[package]
name = "relay"
version = "1.2.0"
edition = "2021"
description = "Relay — When Claude's rate limit hits, another agent picks up exactly where you left off."
license = "MIT"

[[bin]]
name = "relay"
path = "src/main.rs"

[lib]
name = "relay"
path = "src/lib.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }
clap_complete = "4"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling
anyhow = "1"
thiserror = "2"

# Text processing
regex = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Hashing
blake3 = "1"

# HTTP client (for Ollama, OpenAI, Gemini APIs)
ureq = { version = "2", features = ["json"] }

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Signal handling
ctrlc = "3"

# Terminal UI
colored = "2"
indicatif = "0.17"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
console = "0.15"

[build-dependencies]
chrono = "0.4"

[profile.release]
opt-level = 3
lto = "thin"
strip = true
